<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:foreground="?attr/selectableItemBackground"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/zhiding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_fresh"
            android:text="@string/zhiding"
            android:layout_marginLeft="@dimen/sp_10"
            android:textColor="@color/Red" />

        <TextView
            android:id="@+id/news"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/zhiding"
            android:background="@drawable/bg_fresh"
            android:text="@string/news"
            android:textColor="@color/Red" />

        <TextView
            android:id="@+id/offical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/news"
            android:background="@drawable/bg_tag"
            android:text="@string/offical"
            android:textColor="@color/Blue" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/offical"
            android:text="@string/nv_collect" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:text="@string/nv_collect" />
    </RelativeLayout>

    <TextView
        android:textColor="@color/Black"
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/nv_collect"
        android:textSize="15sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView3"
        android:layout_marginTop="15dp">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/nv_collect" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/textView4"
            android:text="@string/nv_collect" />
        <!--<ImageView-->
        <!--android:id="@+id/imageView"-->
        <!--android:layout_marginRight="10dp"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:src="@drawable/ic_like_not"-->
        <!--android:layout_alignParentRight="true"/>-->
        <CheckBox
            android:id="@+id/checkbox1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/chackbox_icon"
            android:button="@null" />
    </RelativeLayout>

</RelativeLayout>
