<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher" />

    <!--android.support.design:hintAnimationEnabled | 是否显示hint的动画,默认true-->
    <!--android.support.design:hintEnabled | 是否使用hint属性,默认true-->
    <!--android.support.design:hintTextAppearance | 设置hint的文字样式(指运行动画效果之后的样式)-->
    <!--android.support.design:counterEnabled | 是否显示计数器-->
    <!--android.support.design:counterMaxLength | 设置计数器的最大值-->
    <!--android.support.design:counterOverflowTextAppearance | 输入字符大于我们限定个数字符时的样式-->
    <!--app:theme 设置浮动标签的颜色主题-->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_ietl_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2">

        <EditText
            android:id="@+id/login_et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:hint="@string/login_text_username"
            />
    </com.google.android.material.textfield.TextInputLayout>


    <!--android.support.design:passwordToggleEnabled | 是否显示密码开关图片,需要EditText设置inputType-->
    <!--android.support.design:passwordToggleTint | 设置密码开关图片颜色-->
    <!--android.support.design:passwordToggleTintMode | 设置密码开关图片(混合颜色模式),与passwordToggleTint同时使用-->
    <!--android.support.design:errorEnabled |是否显示错误信息-->
    <!--android.support.design:errorTextAppearance| 错误信息的字体样式-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_ietl_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_ietl_username"
        app:passwordToggleEnabled="true">


        <!-- TextInputEditText 和 EditText view 的区别 ：
        ，当我们的界面处于全屏或者横屏时,点击一个EditText,和TextInputEditText 默认情况下不是在它下面弹出键盘，
        而是进入到输入法的一个全屏的输入界面(通过配置android:imeOptions=”flagNoExtractUi”可以设为直接在当前界面显示)
        ，在输入界面，EditText 设置的hint 不显示，而TextInputEditText 可以显示
        -->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_text_password"
            android:imeActionLabel="@string/login_text_login"
            android:inputType="textPassword"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_ietl_repassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="32dp"
        android:visibility="gone"
        android:layout_marginRight="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_ietl_password"
        app:passwordToggleEnabled="true">


        <!-- TextInputEditText 和 EditText view 的区别 ：
        ，当我们的界面处于全屏或者横屏时,点击一个EditText,和TextInputEditText 默认情况下不是在它下面弹出键盘，
        而是进入到输入法的一个全屏的输入界面(通过配置android:imeOptions=”flagNoExtractUi”可以设为直接在当前界面显示)
        ，在输入界面，EditText 设置的hint 不显示，而TextInputEditText 可以显示
        -->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_et_repassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_text_repassword"
            android:imeActionLabel="@string/login_text_register"
            android:inputType="textPassword"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/login_btn_submit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"

        android:text="@string/login_text_login"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toEndOf="@+id/login_ietl_password"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/login_ietl_password"
        app:layout_constraintTop_toBottomOf="@+id/login_ietl_repassword" />

    <TextView
        android:id="@+id/login_tv_bottom_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/login_text_login_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_btn_submit" />

</androidx.constraintlayout.widget.ConstraintLayout>